# makepad

./: Cargo.toml
code_editor/core/src/: char.rs  cursor.rs  cursor_set.rs  document.rs  layout.rs  lib.rs  position.rs  selection.rs  selection_set.rs  session.rs  str.rs  text.rs
code_editor/frontend/src/: app.rs  code_editor.rs
code_editor/range_set/src/: range_set.rs
code_editor/regex/: Cargo.toml  TODO
code_editor/regex/scripts/: generate_case_folds.py  generate_compatibility_properties.py  generate_fowler_test_data.py  generate_fowler_tests.py  generate_posix_char_classes.py  generate_simple_case_folding.py  generate_unicode_tables.py  unicode.py
code_editor/regex/src/: ast.rs  byte_class_set.rs  case_folder.rs  char.rs  char_class.rs  code_generator.rs  compiler.rs  cursor.rs  dfa.rs  lib.rs  nfa.rs  parser.rs  posix_char_classes.rs  prog.rs  program.rs  regex.rs  str.rs  str_cursor.rs  utf8_encoder.rs
code_editor/regex/tests/: basic.rs  macros.rs  nullsubexpr.rs  repetitions.rs
code_editor/regex_old/: TODO
code_editor/regex_old/fuzz/: Cargo.toml
code_editor/regex_old/scripts/: generate_fowler_tests.py
code_editor/regex_old/src/: case_folds.rs  char_class.rs  cursor.rs  range.rs  str_cursor.rs  utf8_encoder.rs
code_editor/regex_old/tests/: nullsubexpr.rs  repetitions.rs
code_editor/rope/src/: builder.rs  cursor.rs  info.rs  (+7 more)
code_editor/sparse_set/: Cargo.toml
examples/image_usage/: Cargo.toml  README.md
futures/src/: executor.rs
platform/src/: cx.rs  cx_api.rs  texture.rs
widgets/src/: base.rs  frame.rs  image.rs  lib.rs  video.rs
(+49 files in other folders)
