[workspace]

members = [
    "code_editor/range_set",
    "code_editor/regex",
    "code_editor/rope",
    "code_editor/varint",
    "examples/numbers", 
    "examples/fractal_zoom", 
    "examples/cmdline_example",
    "platform/wasm_bridge/test",
    "examples/fun_audio",
    "studio",
    "tools/webserver",
    "tools/wasm_strip",
    "tools/brotli_check",
]

